# openapi/swagger.json
@@ -1142,6 +1142,76 @@
                 }
             }
         },
+        "/v1/entitlements/periods": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "entitlements"
+                ],
+                "summary": "List entitlement period snapshots",
+                "operationId": "listEntitlementPeriodSnapshots",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Subject",
+                        "name": "subject",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Meter",
+                        "name": "meter",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Plan ID",
+                        "name": "plan_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "State",
+                        "name": "state",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_metering_adapters_http_entitlement.PeriodSnapshotListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ssubedir_open-spanner_internal_metering_adapters_http_internal_respond.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/entitlements/states": {
             "get": {
                 "produces": [
@@ -4035,6 +4105,73 @@
                     "type": "string"
                 },
                 "period": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "warning_percent": {
+                    "type": "number"
+                }
+            }
+        },
+        "internal_metering_adapters_http_entitlement.PeriodSnapshotListResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/internal_metering_adapters_http_entitlement.PeriodSnapshotResponse"
+                    }
+                }
+            }
+        },
+        "internal_metering_adapters_http_entitlement.PeriodSnapshotResponse": {
+            "type": "object",
+            "properties": {
+                "current": {
+                    "type": "number"
+                },
+                "event_count": {
+                    "type": "integer"
+                },
+                "from": {
+                    "type": "string"
+                },
+                "included": {
+                    "type": "number"
+                },
+                "limit": {
+                    "type": "number"
+                },
+                "meter": {
+                    "type": "string"
+                },
+                "overage": {
+                    "type": "number"
+                },
+                "period": {
+                    "type": "string"
+                },
+                "plan_id": {
+                    "type": "string"
+                },
+                "plan_name": {
+                    "type": "string"
+                },
+                "plan_version": {
+                    "type": "integer"
+                },
+                "remaining": {
+                    "type": "number"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "subject": {
+                    "type": "string"
+                },
+                "to": {
                     "type": "string"
                 },
                 "updated_at": {
